--- a/CriminalIntent/AndroidManifest.xml
+++ b/CriminalIntent/AndroidManifest.xml
@@ -14,14 +14,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="me.poernomo.android.criminalintent.CrimeActivity"
-            android:label="@string/app_name" >
+            android:name="me.poernomo.android.criminalintent.CrimeListActivity"
+            android:label="a different label">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="me.poernomo.android.criminalintent.CrimeActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
     </application>
 
 </manifest>
