--- a/CriminalIntent/AndroidManifest.xml
+++ b/CriminalIntent/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="me.poernomo.android.criminalintent.CrimeListActivity"
-            android:label="a different label">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +24,7 @@
         </activity>
         
         <activity
-            android:name="me.poernomo.android.criminalintent.CrimeActivity"
+            android:name="me.poernomo.android.criminalintent.CrimePagerActivity"
             android:label="@string/app_name" >
         </activity>
         
