--- a/NoteBook/AndroidManifest.xml
+++ b/NoteBook/AndroidManifest.xml
@@ -21,6 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".NotePagerActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
