--- a/CriminalIntent/AndroidManifest.xml
+++ b/CriminalIntent/AndroidManifest.xml
@@ -15,19 +15,20 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="me.poernomo.android.criminalintent.CrimeListActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="me.poernomo.android.criminalintent.CrimePagerActivity"
             android:label="@string/app_name" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CrimeListActivity" />
         </activity>
-        
     </application>
 
 </manifest>
